Новая сборка Polymer 3. Переделал компонент ImageList

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         import '@polymer/paper-tabs/paper-tabs.js';
         import '@polymer/paper-tabs/paper-tab.js';
         import '@polymer/iron-pages/iron-pages.js';
+        import '@polymer/paper-toggle-button/paper-toggle-button.js';
+        import '@polymer/iron-ajax/iron-ajax';
     </script>
 
 
