--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         import '@polymer/iron-pages/iron-pages.js';
         import '@polymer/paper-toggle-button/paper-toggle-button.js';
         import '@polymer/iron-ajax/iron-ajax';
+        import '@polymer/paper-button/paper-button.js';
+        import '@polymer/paper-dialog/paper-dialog.js';
+        import '@polymer/paper-dialog-scrollable/paper-dialog-scrollable.js';
     </script>
 
 
