--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         import '@polymer/paper-button/paper-button.js';
         import '@polymer/paper-dialog/paper-dialog.js';
         import '@polymer/paper-dialog-scrollable/paper-dialog-scrollable.js';
+        import '@polymer/paper-spinner/paper-spinner.js';
     </script>
 
 
