Автоматизировал сборку polymer build и копирование node_modules в web

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         import '@polymer/paper-dialog/paper-dialog.js';
         import '@polymer/paper-dialog-scrollable/paper-dialog-scrollable.js';
         import '@polymer/paper-spinner/paper-spinner.js';
+        import '@polymer/paper-listbox/paper-listbox.js';
     </script>
 
 
