Изменил сборку Polymer 3

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
 
   </head>
   <body>
-
+  <paper-tabs selected="0" scrollable>
+    <paper-tab>Tab 0</paper-tab>
+    <paper-tab>Tab 1</paper-tab>
+    <paper-tab>Tab 2</paper-tab>
+    <paper-tab>Tab 3</paper-tab>
+  </paper-tabs>
   </body>
 </html>
