Сверстал блок brand

--- a/src/category.html
+++ b/src/category.html
@@ -129,6 +129,58 @@
                     <div class="catalog">
                         <h1 class="catalog__title">Каталог товаров</h1>
                         <p class="catalog__descr">В каталоге представленна различная пряжа, а также сопутствующие товары для вязания</p>
+                        <h2>Пряжа по производителям</h2>
+                        <div class="brand__list">
+                            <div class="brand__item">
+                                <a class="brand__link" href="#">
+                                    <div class="brand__image-wrapper">
+                                        <img src="img/brands/brand_1.jpg" class="brand__image">
+                                    </div>
+                                    <h3 class="brand__title">ALIZE (Турция)</h3>
+                                </a>
+                            </div>
+                            <div class="brand__item">
+                                <a class="brand__link" href="#">
+                                    <div class="brand__image-wrapper">
+                                        <img src="img/brands/brand_2.jpg" class="brand__image">
+                                    </div>
+                                    <h3 class="brand__title">DALE GARN (Норвегия)</h3>
+                                </a>
+                            </div>
+                            <div class="brand__item">
+                                <a class="brand__link" href="#">
+                                    <div class="brand__image-wrapper">
+                                        <img src="img/brands/brand_3.jpg" class="brand__image">
+                                    </div>
+                                    <h3 class="brand__title">YARNART (Турция)</h3>
+                                </a>
+                            </div>
+                            <div class="brand__item">
+                                <a class="brand__link" href="#">
+                                    <div class="brand__image-wrapper">
+                                        <img src="img/brands/brand_1.jpg" class="brand__image">
+                                    </div>
+                                    <h3 class="brand__title">ALIZE (Турция)</h3>
+                                </a>
+                            </div>
+                            <div class="brand__item">
+                                <a class="brand__link" href="#">
+                                    <div class="brand__image-wrapper">
+                                        <img src="img/brands/brand_2.jpg" class="brand__image">
+                                    </div>
+                                    <h3 class="brand__title">DALE GARN (Норвегия)</h3>
+                                </a>
+                            </div>
+                            <div class="brand__item">
+                                <a class="brand__link" href="#">
+                                    <div class="brand__image-wrapper">
+                                        <img src="img/brands/brand_3.jpg" class="brand__image">
+                                    </div>
+                                    <h3 class="brand__title">YARNART (Турция)</h3>
+                                </a>
+                            </div>
+                        </div>
+                        <h2>Пряжа по составу</h2>
                         <div class="catalog__list">
                             <div class="catalog__item product">
                                 <h2 class="product__title">Пряжа</h2>
