Сделал вывод пряжи, сгрупированой по имени

--- a/src/category.html
+++ b/src/category.html
@@ -132,7 +132,7 @@
                         <h2>Пряжа по производителям</h2>
                         <div class="brand__list">
                             <div class="brand__item">
-                                <a class="brand__link" href="#">
+                                <a class="brand__link" href="brand.html">
                                     <div class="brand__image-wrapper">
                                         <img src="img/brands/brand_1.jpg" class="brand__image">
                                     </div>
@@ -140,7 +140,7 @@
                                 </a>
                             </div>
                             <div class="brand__item">
-                                <a class="brand__link" href="#">
+                                <a class="brand__link" href="brand.html">
                                     <div class="brand__image-wrapper">
                                         <img src="img/brands/brand_2.jpg" class="brand__image">
                                     </div>
@@ -148,7 +148,7 @@
                                 </a>
                             </div>
                             <div class="brand__item">
-                                <a class="brand__link" href="#">
+                                <a class="brand__link" href="brand.html">
                                     <div class="brand__image-wrapper">
                                         <img src="img/brands/brand_3.jpg" class="brand__image">
                                     </div>
