--- a/src/catalog.html
+++ b/src/catalog.html
@@ -304,8 +304,8 @@
                     </div>
                     <div class="pagination">
                         <ul class="pagination__list">
-                            <li class="pagination__item"><a href="" class="link pagination__link">Назад</a></li>
-                            <li class="pagination__item"><a class="link pagination__link pagination__link--active">1</a></li>
+                            <li class="pagination__item pagination__item--disabled"><span>Назад</span></li>
+                            <li class="pagination__item pagination__item--active"><a class="link pagination__link">1</a></li>
                             <li class="pagination__item"><a href="" class="link pagination__link">2</a></li>
                             <li class="pagination__item"><a href="" class="link pagination__link">Вперед</a></li>
                         </ul>
