--- a/src/catalog.html
+++ b/src/catalog.html
@@ -128,8 +128,8 @@
                 <div class="main__page-content">
 
                     <ul class="breadcrumb">
-                        <li><a href="/"><i class="fa fa-home"></i></a> /</li>
-                        <li><a href="">Пряжа</a> /</li>
+                        <li><a href="/"><i class="fa fa-home"></i></a></li>
+                        <li><a href="">Пряжа</a></li>
                         <li>Акриловая пряжа</li>
                     </ul>
 
