--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -9,78 +9,7 @@
 
     </head>
     <body>
-        <header class="page-header">
-            <div class="page-header__user-menu">
-                <ul class="page-header__user-list">
-                    <li><a class="link page-header__user-item" href="login.html">Войти</a> | </li>
-                    <li><a class="link page-header__user-item" href="sign.html">Регистрация</a></li>
-                </ul>
-            </div>
-            <div class="page-header__wrapper">
-                <ul class="page-header__social">
-                    <li class="page-header__social-item"><a href="https://ok.ru/"><img src="img/ok.svg" width="30" alt="Группа в Однокласниках"></a></li>
-                    <li class="page-header__social-item"><a href="https://vk.com"><img src="img/vk.svg" width="30" alt="Группа во Вконтакте"></a></li>
-                </ul>
-                <div class="page-header__logo-wrapper">
-                    <img class="page-header__ravels" src="img/logo-second.png" width="466" height="160">
-                    <img class="page-header__logo" src="img/logo-first.png" width="349" height="99">
-                    <span class="page-header__phone">8-800-000-00-00</span>
-                </div>
-                <div class="page-header__cart-wrapper">
-                    <img class="page-header__cart" src="img/header-cart.svg" width="37">
-                    <div class="page-header__cart-text-wrapper">
-                        <span class="page-header__cart-quantity"><b>товаров: </b>3</span>
-                        <span class="page-header__cart-summ"><b>на сумму: </b>524 руб.</span>
-                    </div>
-                    <a href="#" class="page-header__cart-btn btn">Оформить заказ</a>
-                </div>
-            </div>
-            <nav class="main-nav main-nav--closed main-nav--nojs">
-                <button class="main-nav__toggle">Открыть меню</button>
-                <h2 class="main-nav__title">Главная</h2>
-                <div class="main-nav__wrapper">
-                    <ul class="main-nav__list">
-                        <li class="main-nav__item main-nav__item--active"><a class="main-nav__link" href="/index.html">Главная</a></li>
-                        <li class="main-nav__item main-nav__item--dropdown">
-                            <a class="main-nav__link" href="#">Каталог</a>
-                            <ul class="main-nav__list-sub main-nav__list-sub--closed">
-                                <li class="main-nav__item main-nav__item--all"><a class="main-nav__link" href="/catalog.html">Весь каталог</a>
-                                <li class="main-nav__item"><a class="main-nav__link" href="/catalog.html">Пряжа</a>
-                                    <!--   <ul class="main-nav__list-sub">
-                                           <li><a class="link main-nav__item" href="#">Акриловая пряжа</a></li>
-                                           <li><a class="link main-nav__item" href="#">Бамбуковая пряжа</a></li>
-                                           <li><a class="link main-nav__item" href="#">Буклированная пряжа</a></li>
-                                           <li><a class="link main-nav__item" href="#">Кажемированная пряжа</a></li>
-                                           <li><a class="link main-nav__item" href="#">Ленточная пряжа</a></li>
-                                           <li><a class="link main-nav__item" href="#">Пряжа вискоза</a></li>
-                                       </ul> -->
-                                </li>
-                                <li class="main-nav__item"><a class="main-nav__link" href="#">Наборы для вязания</a></li>
-                                <li class="main-nav__item"><a class="main-nav__link" href="#">Спицы, крючки, инструменты для вязания</a></li>
-                                <li class="main-nav__item"><a class="main-nav__link" href="#">Фурнитура</a></li>
-                                <li class="main-nav__item"><a class="main-nav__link" href="#">Товары для рукоделия</a></li>
-                                <li class="main-nav__item"><a class="main-nav__link" href="#">Литература</a></li>
-                            </ul>
-                        </li>
-                        <li class="main-nav__item"><a class="main-nav__link" href="#">Доставка</a></li>
-                        <li class="main-nav__item"><a class="main-nav__link" href="#">Оплата</a></li>
-                        <li class="main-nav__item"><a class="main-nav__link" href="#">Контакты</a></li>
-                    </ul>
-                    <ul class="main-nav__user-list">
-                        <li class="main-nav__user-item"><a class="main-nav__link" href="#">Войти</a></li>
-                        <li class="main-nav__user-item"><a class="main-nav__link" href="#">Регистрация</a></li>
-                    </ul>
-                    <div class="main-nav__search search">
-                        <form action="" class="search__form">
-                            <div class="search__wrapper">
-                                <input type="text" class="search__input" placeholder="Поиск...">
-                                <button type="submit" class="search__button" >Поиск</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </nav>
-        </header>
+    //= template/header.html
         <main class="main__body">
             <div class="filter__button-wrapper">
                 <button class="filter__button filter__button--closed">Фильтр <span class="filter__arrow"></span></button>
