Внедрил верстку форм авторизации

--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -34,6 +34,15 @@
                     <div class="content__fields">
                         <input type="text" name="login" placeholder="Ваш логин">
                         <input type="password" name="password" placeholder="Ваш пароль">
+                        <div class="content__form-footer">
+                            <div class="checkbox">
+                                <label class="checkbox__label"><input type="checkbox" name="remember"><span
+                                        class="checkbox__box"></span>Запомнить меня</label>
+                            </div>
+
+                            <p>Если вы забыли пароль, вы можете <a href="">восстановить</a> его</p>
+                        </div>
+
                     </div>
                     <button type="submit" class="btn btn--auth">Войти</button>
                 </form>
